Support scanning both main and test files at the same time